cmsDB-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cmsdb-service
spec:
  externalName: cms-db-staging-global.cdzsrodlzhu9.eu-central-1.rds.amazonaws.com
  type: ExternalName
